--- a/content/getting-started/index.mdx
+++ b/content/getting-started/index.mdx
@@ -26,7 +26,7 @@ npm i @nature-ui/core
 
 ```bash
 yarn add -D tailwindcss postcss autoprefixer.
-yarn add @nature-ui/core
+yarn add @nature-ui/core@latest
 ```
 
 After installing Nature UI, you need to set up `Tailwindcss` and `Postcss`. Run the following command to generate both configurations:
